fix bugs around ps1 scripts

--- a/.vscode/tasks.TEMPLATE.json
+++ b/.vscode/tasks.TEMPLATE.json
@@ -61,7 +61,7 @@
     {
       "id": "toolsPath",
       "type": "promptString",
-      "default": "C:\nftools",
+      "default": "C:/nftools",
       "description": "Path where to install the tools."
     },
     {
