--- a/targets/FreeRTOS/Sipeed/Maixduino/CMakeLists.txt
+++ b/targets/FreeRTOS/Sipeed/Maixduino/CMakeLists.txt
@@ -7,35 +7,32 @@ include(binutils.common)
 include(binutils.FreeRTOS)
 
 nf_setup_target_build(
-    HAS_NANOBOOTER
+    # HAS_NANOBOOTER
 
-    BOOTER_LINKER_FILE 
-        kendryte-k210
+    # BOOTER_LINKER_FILE 
+    #    kendryte-k210
 
     CLR_LINKER_FILE 
         kendryte-k210
 
-    BOOTER_EXTRA_COMPILE_DEFINITIONS
-        -DCPU_K210
+    # BOOTER_EXTRA_COMPILE_DEFINITIONS
+    #    -DCPU_K210
     
     CLR_EXTRA_COMPILE_DEFINITIONS
         -DCPU_K210
 
-    BOOTER_EXTRA_LINKMAP_PROPERTIES
-        ",--library-path=${CMAKE_SOURCE_DIR}/targets/Sipeed/common,--defsym=__crt_heap_size__=0x0"
+    # BOOTER_EXTRA_LINKMAP_PROPERTIES
+    #    ",--library-path=${CMAKE_SOURCE_DIR}/targets/Sipeed/common,--defsym=__crt_heap_size__=0x0"
 
     CLR_EXTRA_LINKMAP_PROPERTIES
         ",--library-path=${CMAKE_SOURCE_DIR}/targets/Sipeed/common,--defsym=__crt_heap_size__=0x0"
+
+    # BOOTER_EXTRA_LIBRARIES
+    #    "m;freertos;atomic;bsp;c;stdc++;drivers;posix;hal;"
+    CLR_EXTRA_LIBRARIES
+        "m;freertos;atomic;bsp;c;stdc++;drivers;posix;hal;"
 )
 
-target_compile_definitions(NF_Network PUBLIC -DCPU_K210)
+# TODO Enable
+# target_compile_definitions(NF_Network PUBLIC -DCPU_K210)
 target_compile_definitions(NF_NativeAssemblies PUBLIC -DCPU_K210)
-
-if(SRECORD_TOOL_AVAILABLE)
-
-    nf_generate_hex_package(
-        ${CMAKE_SOURCE_DIR}/build/${NANOBOOTER_PROJECT_NAME}.hex
-        ${CMAKE_SOURCE_DIR}/build/${NANOCLR_PROJECT_NAME}.hex
-        ${CMAKE_SOURCE_DIR}/build/nanobooter-nanoclr.hex)
-
-endif()
