--- a/targets/FreeRTOS/Sipeed/_common/lwip/CMakeLists.txt
+++ b/targets/FreeRTOS/Sipeed/_common/lwip/CMakeLists.txt
@@ -3,5 +3,5 @@ cmake_minimum_required(VERSION 3.7)
 project(lwIP)
 
 set(LWIP_DIR ${CMAKE_CURRENT_SOURCE_DIR})
-include_directories(${LWIP_DIR}/src/include ${MAIXDUINO_FREERTOS_DIR}/include ${MAIXDUINO_FREERTOS_DIR}/conf  ${MAIXDUINO_FREERTOS_DIR}/portable)
+include_directories(${LWIP_DIR}/src/include ${FREERTOS_INCLUDE})
 include(src/Filelists.cmake)
