--- a/targets/FreeRTOS/Sipeed/_common/bsp/CMakeLists.txt
+++ b/targets/FreeRTOS/Sipeed/_common/bsp/CMakeLists.txt
@@ -15,6 +15,7 @@ FILE(GLOB_RECURSE ASSEMBLY_FILES
 SET(LIB_SRC ${LIB_SRC_NOASM} ${ASSEMBLY_FILES})
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR}/include)
+INCLUDE_DIRECTORIES(${FREERTOS_INCLUDE})
 
 SET_PROPERTY(SOURCE ${ASSEMBLY_FILES} PROPERTY LANGUAGE C)
 SET_SOURCE_FILES_PROPERTIES(${ASSEMBLY_FILES} PROPERTIES COMPILE_FLAGS "-x assembler-with-cpp -D __riscv64")
@@ -22,3 +23,5 @@ SET_SOURCE_FILES_PROPERTIES(${ASSEMBLY_FILES} PROPERTIES COMPILE_FLAGS "-x assem
 ADD_LIBRARY(bsp STATIC ${LIB_SRC})
 SET_TARGET_PROPERTIES(bsp PROPERTIES LINKER_LANGUAGE C)
 TARGET_LINK_LIBRARIES(bsp PRIVATE hal freertos)
+
+TARGET_INCLUDE_DIRECTORIES(bsp PUBLIC ${FREERTOS_INCLUDE})
