--- a/targets/FreeRTOS/Sipeed/_common/posix/CMakeLists.txt
+++ b/targets/FreeRTOS/Sipeed/_common/posix/CMakeLists.txt
@@ -15,6 +15,7 @@ FILE(GLOB_RECURSE ASSEMBLY_FILES
 SET(LIB_SRC ${LIB_SRC_NOASM} ${ASSEMBLY_FILES})
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR}/include)
+INCLUDE_DIRECTORIES(${FREERTOS_INCLUDE})
 
 SET_PROPERTY(SOURCE ${ASSEMBLY_FILES} PROPERTY LANGUAGE C)
 SET_SOURCE_FILES_PROPERTIES(${ASSEMBLY_FILES} PROPERTIES COMPILE_FLAGS "-x assembler-with-cpp -D __riscv64")
@@ -22,4 +23,5 @@ SET_SOURCE_FILES_PROPERTIES(${ASSEMBLY_FILES} PROPERTIES COMPILE_FLAGS "-x assem
 ADD_LIBRARY(posix STATIC ${LIB_SRC})
 SET_TARGET_PROPERTIES(posix PROPERTIES LINKER_LANGUAGE C)
 TARGET_LINK_LIBRARIES(posix PRIVATE freertos)
-TARGET_INCLUDE_DIRECTORIES(posix PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include)
+
+TARGET_INCLUDE_DIRECTORIES(posix PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include ${FREERTOS_INCLUDE})
