--- a/targets/FreeRTOS/Sipeed/_nanoCLR/target_platform.h.in
+++ b/targets/FreeRTOS/Sipeed/_nanoCLR/target_platform.h.in
@@ -14,6 +14,6 @@
 #define NANOCLR_GRAPHICS @NANOCLR_GRAPHICS@
 
 // set preference to enable (or not) the RTC subsystem
-#define NXP_USE_RTC @HAL_USE_RTC_OPTION@
+#define K210_USE_RTC @HAL_USE_RTC_OPTION@
 
 #endif // TARGET_PLATFORM_H
