--- a/targets/FreeRTOS/Sipeed/_common/CMakeLists.txt
+++ b/targets/FreeRTOS/Sipeed/_common/CMakeLists.txt
@@ -24,8 +24,7 @@ list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/uti
 list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${lwip_SOURCE_DIR}/src/include)
 list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${fatfs_SOURCE_DIR}/source)
 
-# TODO コメントアウトを外す
-# list(APPEND TARGET_MAIXDUINO_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/WireProtocol_HAL_Interface.c)
+list(APPEND TARGET_MAIXDUINO_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/WireProtocol_HAL_Interface.c)
 
 # append Target files
 list(APPEND TARGET_MAIXDUINO_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Device_BlockStorage.c)
