--- a/targets/FreeRTOS/Sipeed/_common/CMakeLists.txt
+++ b/targets/FreeRTOS/Sipeed/_common/CMakeLists.txt
@@ -25,6 +25,7 @@ list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${lwip_SOURCE_DIR}/src/include)
 list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${fatfs_SOURCE_DIR}/source)
 
 list(APPEND TARGET_MAIXDUINO_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/WireProtocol_HAL_Interface.c)
+list(APPEND TARGET_MAIXDUINO_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/GenericPort_Write.cpp)
 
 # append Target files
 list(APPEND TARGET_MAIXDUINO_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/Device_BlockStorage.c)
