--- a/targets/FreeRTOS/Sipeed/_common/CMakeLists.txt
+++ b/targets/FreeRTOS/Sipeed/_common/CMakeLists.txt
@@ -13,12 +13,11 @@ list(APPEND FREERTOS_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/lib/freertos/conf)
 list(APPEND FREERTOS_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/lib/freertos/portable)
 list(APPEND FREERTOS_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/lib/freertos/include)
 
-list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/lib/freertos/conf)
+list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${FREERTOS_INCLUDE})
 
 list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR}/lib/arch/include)
 list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR}/lib//utils/include)
 list(APPEND TARGET_MAIXDUINO_COMMON_INCLUDE_DIRS ${CMAKE_CURRENT_LIST_DIR}/lib//include)
-
 
 list(APPEND TARGET_MAIXDUINO_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/WireProtocol_HAL_Interface.c)
 list(APPEND TARGET_MAIXDUINO_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/GenericPort_Write.cpp)
